force-app/main/default/objects/User/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <label>Access Level Default</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
                <default>true</default>
                <label>Level 2</label>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4 - AE1</fullName>
            </value>
            <value>
                <fullName>Level 4 - AE2</fullName>
            </value>
            <value>
                <fullName>Level 4 - AE3</fullName>
            </value>
            <value>
                <fullName>Level 5 - IS</fullName>
            </value>
            <value>
                <fullName>Level 5 - ENT</fullName>
            </value>
            <value>
                <fullName>Level 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>