force-app/main/default/objects/User/fields/ADR_Assignment__c.field-meta.xml
<CustomField>
    <fullName>ADR_Assignment__c</fullName>
    <label>ADR Assignment</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>The related user must have ADR in their role name.</errorMessage>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>ADR</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <infoMessage>Select the ADR aligned to this AE.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <relationshipName>ADR</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>