force-app/main/default/objects/User/fields/ADR_Assignment_User_ID__c.field-meta.xml
<CustomField>
    <fullName>ADR_Assignment_User_ID__c</fullName>
    <formula>ADR_Assignment__r.X18_Digit_User_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADR Assignment User ID</label>
    <type>Text</type>
</CustomField>