force-app/main/default/objects/User/fields/ADR_Segment_Alignment__c.field-meta.xml
<CustomField>
    <fullName>ADR_Segment_Alignment__c</fullName>
    <description>The segment OB ADRs are supporting, as this is not in the role hierarchy.</description>
    <label>ADR Segment Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AE2</fullName>
            </value>
            <value>
                <fullName>AE2 SLED</fullName>
            </value>
            <value>
                <fullName>AE3</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>DVS</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Inbound GS</fullName>
            </value>
            <value>
                <fullName>Mid - Market</fullName>
            </value>
            <value>
                <fullName>Mid - Market GS</fullName>
            </value>
            <value>
                <fullName>Mid - Market Pubsec</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Select</fullName>
            </value>
            <value>
                <fullName>Select Pubsec</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>