force-app/main/default/objects/User/fields/By_Pass_Deal_Desk_Approval__c.field-meta.xml
<CustomField>
    <fullName>By_Pass_Deal_Desk_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify whether the approval should go to Deal Desk or Sales Director</description>
    <label>Bypass DD Approval</label>
    <type>Checkbox</type>
</CustomField>