force-app/main/default/objects/User/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <description>Lookup to the CSM linked to this user.</description>
    <label>CSM</label>
    <relationshipName>CSMs</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>