force-app/main/default/objects/User/fields/Enable_Inbound_Leads__c.field-meta.xml
<CustomField>
    <fullName>Enable_Inbound_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If it is checked, I can receive inbound leads. 
If it is not, I can&apos;t (eg. I am on vacations, etc.)</description>
    <label>Enable Inbound Leads</label>
    <type>Checkbox</type>
</CustomField>