force-app/main/default/objects/User/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <inlineHelpText>Planning to delete field 4/1/2020. Reach out to bit.ly/samsarasalesops &amp; Adam Barten if you have questions</inlineHelpText>
    <label>Entity[deprecated]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Samsara US</fullName>
            </value>
            <value>
                <fullName>Samsara UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>