force-app/main/default/objects/User/fields/Experimental_Group__c.field-meta.xml
<CustomField>
    <fullName>Experimental_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Growth to indicate that this record is part of an experimental group.</description>
    <label>Experimental Group</label>
    <type>Checkbox</type>
</CustomField>