force-app/main/default/objects/User/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <description>DO NOT DELETE.  REQUIRED FOR HISTORICAL REPORTING.  Contact Adam Barten with questions

 Pre Q1 FY21 AE Geography.</description>
    <label>Geography[Legacy]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Northeast</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>South &amp; Midwest</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Canada West</fullName>
            </value>
            <value>
                <fullName>Canada East</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>DACH</fullName>
            </value>
            <value>
                <fullName>UK &amp; I</fullName>
            </value>
            <value>
                <fullName>Iberia</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>BENELUX</fullName>
            </value>
            <value>
                <fullName>Industrial MV</fullName>
            </value>
            <value>
                <fullName>Industrial 4.0</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>