force-app/main/default/objects/User/fields/Global_Market__c.field-meta.xml
<CustomField>
    <fullName>Global_Market__c</fullName>
    <description>Used to scale reporting for EMEA, buckets users from different EMEA countries under one umbrella. Only visible to SalesOps profile.</description>
    <label>Global Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>