force-app/main/default/objects/User/fields/Inbound_ADR_Out_Of_Office__c.field-meta.xml
<CustomField>
    <fullName>Inbound_ADR_Out_Of_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to send inbound leads only AE&apos;s and ADR&apos;s that are in the office (i.e. out sick, on vacation, etc).</description>
    <label>Out Of Office</label>
    <type>Checkbox</type>
</CustomField>