force-app/main/default/objects/User/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>TextArea</type>
</CustomField>