force-app/main/default/objects/User/fields/Last_Cold_Call_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Cold_Call_Transfer_Date__c</fullName>
    <label>Last Cold Call Transfer Date</label>
    <type>DateTime</type>
</CustomField>