force-app/main/default/objects/User/fields/Last_Inbound_Transfer_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Inbound_Transfer_Id__c</fullName>
    <description>Stores the id of the last inbound account that has been assigned to the user (enables history tracking).</description>
    <label>Last Inbound Transfer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>