force-app/main/default/objects/User/fields/Last_Partner_Transfer_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Partner_Transfer_Id__c</fullName>
    <label>Last Partner Transfer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>