force-app/main/default/objects/User/fields/Leave_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Leave_Return_Date__c</fullName>
    <label>Leave Return Date</label>
    <type>Date</type>
</CustomField>