force-app/main/default/objects/User/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADR ENT</fullName>
            </value>
            <value>
                <fullName>ADR IB</fullName>
            </value>
            <value>
                <fullName>ADR OB</fullName>
            </value>
            <value>
                <fullName>ADR DVS</fullName>
            </value>
            <value>
                <fullName>ADR Manager</fullName>
            </value>
            <value>
                <fullName>ADR Director</fullName>
            </value>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>AE 1</fullName>
            </value>
            <value>
                <fullName>AE 2</fullName>
            </value>
            <value>
                <fullName>AE 3</fullName>
            </value>
            <value>
                <fullName>SB AE</fullName>
            </value>
            <value>
                <fullName>Renewal AE</fullName>
            </value>
            <value>
                <fullName>Channel AE</fullName>
            </value>
            <value>
                <fullName>Enterprise AE</fullName>
            </value>
            <value>
                <fullName>Major AE</fullName>
            </value>
            <value>
                <fullName>ISM</fullName>
            </value>
            <value>
                <fullName>ISM - AE1</fullName>
            </value>
            <value>
                <fullName>ISM - AE2</fullName>
            </value>
            <value>
                <fullName>ISM - AE3</fullName>
            </value>
            <value>
                <fullName>ISM - AE1/AE2</fullName>
            </value>
            <value>
                <fullName>ISM - AE2/AE3</fullName>
            </value>
            <value>
                <fullName>ISD</fullName>
            </value>
            <value>
                <fullName>RSD</fullName>
            </value>
            <value>
                <fullName>SE 1</fullName>
            </value>
            <value>
                <fullName>SE 2</fullName>
            </value>
            <value>
                <fullName>SE 3</fullName>
            </value>
            <value>
                <fullName>Channel SE</fullName>
            </value>
            <value>
                <fullName>Field SE</fullName>
            </value>
            <value>
                <fullName>SE Manager</fullName>
            </value>
            <value>
                <fullName>Field SE Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>