force-app/main/default/objects/User/fields/LoA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LoA_Start_Date__c</fullName>
    <description>added for GTMS-10594</description>
    <label>LoA Start Date</label>
    <type>Date</type>
</CustomField>