force-app/main/default/objects/User/fields/Manager_Name_OKTA__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name_OKTA__c</fullName>
    <label>Manager Email OKTA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>