force-app/main/default/objects/User/fields/map_default__c.field-meta.xml
<CustomField>
    <fullName>map_default__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Let the user choose whether they want to see the sales map by default or not</description>
    <label>Show map by default</label>
    <type>Checkbox</type>
</CustomField>