force-app/main/default/objects/User/fields/Negotiate_By_Price__c.field-meta.xml
<CustomField>
    <fullName>Negotiate_By_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is true if the rep prefers to negotiate by price rather than by % of discount.</description>
    <label>Negotiate By Price</label>
    <type>Checkbox</type>
</CustomField>