force-app/main/default/objects/User/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <label>Office Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Atlanta - ATL1</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>London - UK1</fullName>
            </value>
            <value>
                <fullName>London - UK2</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Remote - AK</fullName>
            </value>
            <value>
                <fullName>Remote - AL</fullName>
            </value>
            <value>
                <fullName>Remote - AR</fullName>
            </value>
            <value>
                <fullName>Remote - AZ</fullName>
            </value>
            <value>
                <fullName>Remote - CA</fullName>
            </value>
            <value>
                <fullName>Remote - Calgary</fullName>
            </value>
            <value>
                <fullName>Remote - Canada</fullName>
            </value>
            <value>
                <fullName>Remote - CO</fullName>
            </value>
            <value>
                <fullName>Remote - Colombia</fullName>
            </value>
            <value>
                <fullName>Remote - CT</fullName>
            </value>
            <value>
                <fullName>Remote - DC</fullName>
            </value>
            <value>
                <fullName>Remote - FL</fullName>
            </value>
            <value>
                <fullName>Remote - France</fullName>
            </value>
            <value>
                <fullName>Remote - France (35H)</fullName>
            </value>
            <value>
                <fullName>Remote - GA</fullName>
            </value>
            <value>
                <fullName>Remote - Germany</fullName>
            </value>
            <value>
                <fullName>Remote - HI</fullName>
            </value>
            <value>
                <fullName>Remote - IA</fullName>
            </value>
            <value>
                <fullName>Remote - ID</fullName>
            </value>
            <value>
                <fullName>Remote - IL</fullName>
            </value>
            <value>
                <fullName>Remote - IN</fullName>
            </value>
            <value>
                <fullName>Remote - India</fullName>
            </value>
            <value>
                <fullName>Remote - KS</fullName>
            </value>
            <value>
                <fullName>Remote - KY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>