force-app/main/default/objects/User/fields/Order_Admin_Available__c.field-meta.xml
<CustomField>
    <fullName>Order_Admin_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Admin Available</label>
    <type>Checkbox</type>
</CustomField>