force-app/main/default/objects/User/fields/Order_Admin_Fallback_User__c.field-meta.xml
<CustomField>
    <fullName>Order_Admin_Fallback_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this user will be selected as the Order Admin if another Order Admin round robin is not found.</description>
    <label>Order Admin Fallback User</label>
    <type>Checkbox</type>
</CustomField>