force-app/main/default/objects/User/fields/Order_Admin_Oppty_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Admin_Oppty_Date__c</fullName>
    <description>This is the last date/time stamp when the Order admin was assigned an Oppty</description>
    <label>Order Admin Oppty Date</label>
    <type>DateTime</type>
</CustomField>