force-app/main/default/objects/User/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <formula>TEXT(Contact.Account.Partner_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Type</label>
    <type>Text</type>
</CustomField>