force-app/main/default/objects/User/fields/Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Photo_URL__c</fullName>
    <description>Photo URL for dashboards</description>
    <label>Photo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>