force-app/main/default/objects/User/fields/PnP_Rollout_Phase__c.field-meta.xml
<CustomField>
    <fullName>PnP_Rollout_Phase__c</fullName>
    <description>GTMS-23147  PnP Rollout Phase identifier on the User Record</description>
    <label>PnP Rollout Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phase 1</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>Phase 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>