force-app/main/default/objects/User/fields/Quota__c.field-meta.xml
<CustomField>
    <fullName>Quota__c</fullName>
    <description>Current Quarter Quota</description>
    <inlineHelpText>Current Quarter Quota set by Sales Management</inlineHelpText>
    <label>Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>