force-app/main/default/objects/User/fields/RC_IB_ID__c.field-meta.xml
<CustomField>
    <fullName>RC_IB_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The ID for AE&apos;s inbound line in RingCentral</description>
    <externalId>true</externalId>
    <label>RingCentral Inbound ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>