force-app/main/default/objects/User/fields/Role_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Role_Legacy__c</fullName>
    <description>DO NOT DELETE. REQUIRED FOR HISTORICAL REPORTING. Contact Adam Barten with questions 

Pre Q1 FY21 Sales Roles.</description>
    <label>Role[Legacy]</label>
    <length>100</length>
    <type>Text</type>
</CustomField>