force-app/main/default/objects/User/fields/Role_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Role_Start_Date__c</fullName>
    <description>Date when user was hired or promoted into current role</description>
    <inlineHelpText>Date when user was hired or promoted into current role</inlineHelpText>
    <label>Role Start Date</label>
    <type>Date</type>
</CustomField>