force-app/main/default/objects/User/fields/RR_Is_Pool_User__c.field-meta.xml
<CustomField>
    <fullName>RR_Is_Pool_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>added for GTMS-13168</description>
    <label>Is Pool User</label>
    <type>Checkbox</type>
</CustomField>