force-app/main/default/objects/User/fields/Sales_Sector__c.field-meta.xml
<CustomField>
    <fullName>Sales_Sector__c</fullName>
    <label>Sales Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PrivateSector</fullName>
            </value>
            <value>
                <fullName>PublicSector</fullName>
            </value>
            <value>
                <fullName>Private Sector</fullName>
                <isActive>false</isActive>
                <label>Private Sector</label>
            </value>
            <value>
                <fullName>Public Sector</fullName>
                <isActive>false</isActive>
                <label>Public Sector</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>