force-app/main/default/objects/User/fields/Sales_Segment_Parent__c.field-meta.xml
<CustomField>
    <fullName>Sales_Segment_Parent__c</fullName>
    <label>Sales Segment Parent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COMM</fullName>
            </value>
            <value>
                <fullName>ENT+</fullName>
            </value>
            <value>
                <fullName>Renewals</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Sales Engineering</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>