force-app/main/default/objects/User/fields/Sales_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_User_Type__c</fullName>
    <label>Sales User Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AVP - Team 1</fullName>
            </value>
            <value>
                <fullName>AVP - Team 2</fullName>
            </value>
            <value>
                <fullName>AVP - Team 3</fullName>
            </value>
            <value>
                <fullName>AVP - Team 4</fullName>
            </value>
            <value>
                <fullName>AVP - Team 5</fullName>
            </value>
            <value>
                <fullName>AVP - Team 6</fullName>
            </value>
            <value>
                <fullName>AVP - Team EMEA</fullName>
            </value>
            <value>
                <fullName>AVP - Team 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>