force-app/main/default/objects/User/fields/Slack_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_User_Id__c</fullName>
    <description>Unique slack id used to slack reps.</description>
    <label>Slack User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>