force-app/main/default/objects/User/fields/Team_Email_Alias__c.field-meta.xml
<CustomField>
    <fullName>Team_Email_Alias__c</fullName>
    <label>Team Email Alias</label>
    <type>Email</type>
</CustomField>