force-app/main/default/objects/User/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <inlineHelpText>Use instead of Geography as of Q1.FY2021</inlineHelpText>
    <label>Sales Territory</label>
    <type>TextArea</type>
</CustomField>