force-app/main/default/objects/User/fields/Trial_Quota__c.field-meta.xml
<CustomField>
    <fullName>Trial_Quota__c</fullName>
    <description>Populates value from Quota record if it is updated/created within the fiscal start &amp; end date.
Created as part of GTMS-25663</description>
    <label>Trial+ Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>