force-app/main/default/objects/User/fields/Universal_Cable_User__c.field-meta.xml
<CustomField>
    <fullName>Universal_Cable_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by EJ to pilot universal cables.</description>
    <label>Universal Cable User</label>
    <type>Checkbox</type>
</CustomField>