force-app/main/default/objects/User/fields/User_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>User_Termination_Date__c</fullName>
    <label>User Termination Date</label>
    <type>Date</type>
</CustomField>