force-app/main/default/objects/User/validationRules/Employee_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Number_Required</fullName>
    <active>true</active>
    <description>Bamboo Id is required for new users.</description>
    <errorConditionFormula>AND( IsBlank(ContactId) , IsActive, EmployeeNumber = NULL ,
OR(ISNEW(), ISCHANGED( EmployeeNumber ) ) )</errorConditionFormula>
    <errorDisplayField>EmployeeNumber</errorDisplayField>
    <errorMessage>This user requires a Bamboo HR Id.</errorMessage>
</ValidationRule>