force-app/main/default/objects/User/validationRules/Territory_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Territory_Field_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CONTAINS( UserRole.Name , &apos;AE1&apos;),
NOT(CONTAINS( UserRole.Name , &apos;- Manager&apos;)), 
ISBLANK( Territory__c ))</errorConditionFormula>
    <errorMessage>Please update Territory field.</errorMessage>
</ValidationRule>