force-app/main/default/objects/User/validationRules/Users_Cant_Change_Their_User_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Users_Cant_Change_Their_User_Info</fullName>
    <active>true</active>
    <description>Required for Xactly compliance!</description>
    <errorConditionFormula>AND( 
NOT($Permission.Validation_Rule_Exemption), 
IsActive, 
OR(ISCHANGED(Email), 
ISCHANGED(EmployeeNumber), 
ISCHANGED(FirstName), 
ISCHANGED(LastName), 
ISCHANGED(MiddleName), 
ISCHANGED(Alias), 
ISCHANGED(Username), 
ISCHANGED(CommunityNickname), 
ISCHANGED( EmployeeNumber ), 
ISCHANGED( Slack_Username__c ) 
) 
)</errorConditionFormula>
    <errorMessage>Please contact Sales Ops if you need to make changes to your user record.</errorMessage>
</ValidationRule>