force-app/main/default/objects/User/listViews/Active_User_Unverified_Email_List.listView-meta.xml
<ListView>
    <fullName>Active_User_Unverified_Email_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>HAS_USER_VERIFIED_EMAIL</columns>
    <columns>X18_Digit_User_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>HAS_USER_VERIFIED_EMAIL</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>acn_ttn__User_License__c</field>
        <operation>equals</operation>
        <value>Salesforce</value>
    </filters>
    <label>Active User Unverified Email List</label>
    <language>en_US</language>
</ListView>